src-tauri/u00261
   Compiling antigravity_tools v3.3.19 (/Users/lbjlaq/Desktop/at/src-tauri)
error[E0412]: cannot find type `ChatCompletionResponse` in this scope
  --> src/proxy/mappers/openai/collector.rs:30:13
   |
30 | ) -> Result<ChatCompletionResponse, String>
   |             ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope
   |
help: you might be missing a type parameter
   |
28 | pub async fn collect_openai_stream_to_json<S, ChatCompletionResponse>(
   |                                             ++++++++++++++++++++++++

error[E0422]: cannot find struct, variant or union type `ChatCompletionResponse` in this scope
  --> src/proxy/mappers/openai/collector.rs:63:24
   |
63 |     let mut response = ChatCompletionResponse {
   |                        ^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error[E0422]: cannot find struct, variant or union type `FunctionCall` in this scope
   --> src/proxy/mappers/openai/collector.rs:107:47
    |
107 | ...                   function: FunctionCall {
    |                                 ^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this struct through its public re-export
    |
  4 + use crate::proxy::mappers::claude::FunctionCall;
    |

error[E0412]: cannot find type `Usage` in this scope
   --> src/proxy/mappers/openai/collector.rs:138:53
    |
138 |             if let Ok(u) = serde_json::from_value::<Usage>(usage.clone()) {
    |                                                     ^^^^^ not found in this scope
    |
help: consider importing this struct through its public re-export
    |
  4 + use crate::proxy::mappers::claude::Usage;
    |

error[E0412]: cannot find type `Bytes` in this scope
   --> src/proxy/handlers/openai.rs:160:75
    |
160 |                     let sse_stream = openai_stream.map(|result| -> Result<Bytes, std::io::Error> {
    |                                                                           ^^^^^ not found in this scope
    |
help: consider importing one of these items
    |
  2 + use std::io::Bytes;
    |
  2 + use std::str::Bytes;
    |
  2 + use axum::body::Bytes;
    |
  2 + use bytes::Bytes;
    |
    = and 2 other candidates

warning: unused import: `json`
 --> src/proxy/mappers/openai/collector.rs:7:18
  |
7 | use serde_json::{json, Value};
  |                  ^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0560]: struct `mappers::openai::models::ToolCall` has no field named `type_`
   --> src/proxy/mappers/openai/collector.rs:106:37
    |
106 | ...                   type_: "function".to_string(),
    |                       ^^^^^ unknown field
    |
help: a field with a similar name exists
    |
106 -                                     type_: "function".to_string(),
106 +                                     type: "function".to_string(),
    |

Some errors have detailed explanations: E0412, E0422, E0560.
For more information about an error, try `rustc --explain E0412`.
warning: `antigravity_tools` (lib) generated 1 warning
error: could not compile `antigravity_tools` (lib) due to 6 previous errors; 1 warning emitted
